--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
     <h2 id="thanks">Thank you for visiting</h2>
 
     <p id="mission">
-      Welcome to my website! I’m a self taught web developer looking for a job
-      within the industry where I can work with and learn from a team of other
-      professionals. Currently I am mainly a front end developer but hope to
-      grow comfortably into a full stack role. I appreciate you taking the time
-      to look over a few of my projects and I encourage you to reach out and
-      send me an email.
+      Welcome to my website! I am experienced in web developmental technologies
+      such as HTML, CSS, Javascript, React, Nodejs, and Express along with
+      helpful side tools such as Adobe Photoshop and implementation of Google
+      Adsense. Currently exploring opportunities within companies where I can
+      learn from other professionals and develop new skills for the job.
+      Currently I am mainly a front end designer but still work with and am
+      learning more backend technologies. If you're interested in reaching out
+      or want to see some of my past work don't hesitate to send me a message.
     </p>
 
     <ul id="skills">
@@ -51,6 +53,8 @@
       <li>HTML</li>
       <li>CSS</li>
       <li>Javascript</li>
+      <li>Node.js</li>
+      <li>Express</li>
       <li>Adobe Photoshop</li>
       <li>GitHub</li>
       <li>API's</li>
