--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       <li>HTML</li>
       <li>CSS</li>
       <li>Javascript</li>
+      <li>React</li>
+      <li>Redux</li>
       <li>Node.js</li>
       <li>Express</li>
       <li>Adobe Photoshop</li>
