--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
     <h2 id="thanks">Thank you for visiting</h2>
 
     <p id="mission">
-      Welcome to my website! I am experienced in web developmental technologies
-      such as HTML, CSS, Javascript, React, Nodejs, and Express along with
-      helpful side tools such as Adobe Photoshop and implementation of Google
-      Adsense. Currently exploring opportunities within companies where I can
-      learn from other professionals and develop new skills for the job.
-      Currently I am mainly a front end designer but still work with and am
-      learning more backend technologies. If you're interested in reaching out
-      or want to see some of my past work don't hesitate to send me a message.
+      Welcome to my website! I am an independant web developer experienced in
+      developmental technologies such as HTML, CSS, Javascript, PHP, React, and
+      Nodejs along with helpful side tools such as Adobe Photoshop. Currently
+      I'm exploring opportunities within companies where I can learn from other
+      professionals and develop new skills for the job. If you're interested in
+      reaching out or want to see some of my past work don't hesitate to send me
+      a message at
+      <a href="https://www.linkedin.com/in/sean-longendyke/">linkedin.com</a> or
+      an email at
+      <a href="mailto:seanalongendyke@gmail.com"> seanalongendyke@gmail.com</a>.
     </p>
 
     <ul id="skills">
@@ -60,9 +62,7 @@
       <li>Adobe Photoshop</li>
       <li>GitHub</li>
       <li>API's</li>
-      <li>Visual Studio</li>
-      <li>Responsive Web Design</li>
-      <li>Mobile First Web Design</li>
+      <li>PHP</li>
     </ul>
 
     <ul id="certifications">
@@ -91,9 +91,14 @@
     </ul>
 
     <section id="portfolio">
-      <a href="https://codepen.io/Roman344/full/gOoGppG" target="_blank">
+      <a href="https://github.com/Breach344/Nodejs-Sales-Site" target="_blank">
         <img src="img/sales-page.png" alt="Project picture" />
-        <p id="project-one">Sales Page Example</p>
+        <p id="project-one">Nodejs Login Sales Site</p>
+      </a>
+
+      <a href="https://github.com/Breach344/CMS" target="_blank">
+        <img src="img/calendar.png" alt="Project picture" />
+        <p id="project-two">PHP Database CMS</p>
       </a>
 
       <a href="https://codepen.io/Roman344/full/eYemLQx" target="_blank">
@@ -104,11 +109,6 @@
       <a href="https://codepen.io/Roman344/full/RwjGvdz" target="_blank">
         <img src="img/translate.png" alt="Project picture" />
         <p id="project-two">Image/Text Translator</p>
-      </a>
-
-      <a href="https://codepen.io/Roman344/full/zYdRPVr" target="_blank">
-        <img src="img/form.png" alt="Project picture" />
-        <p id="project-two">Web Form Example</p>
       </a>
 
       <div id="spacer">i</div>
