--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
         <p id="project-two">Pokemon Red/Blue Dex</p>
       </a>
 
+      <a href="https://github.com/Breach344/FGO-Duel" target="_blank">
+        <img src="img/fgo.png" alt="Project picture" />
+        <p id="project-two">Fgo Duel(Video Game)</p>
+      </a>
+
       <a href="https://codepen.io/Roman344/full/RwjGvdz" target="_blank">
         <img src="img/translate.png" alt="Project picture" />
         <p id="project-two">Image/Text Translator</p>
