--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2 id="thanks">Thank you for visiting</h2>
 
     <p id="mission">
-      Welcome to my website! I am an independant web developer experienced in
+      Welcome to my website! I am an independent web developer experienced in
       developmental technologies such as HTML, CSS, Javascript, PHP, React, and
       Nodejs along with helpful side tools such as Adobe Photoshop. Currently
       I'm exploring opportunities within companies where I can learn from other
@@ -46,8 +46,7 @@
       reaching out or want to see some of my past work don't hesitate to send me
       a message at
       <a href="https://www.linkedin.com/in/sean-longendyke/">linkedin.com</a> or
-      an email at
-      <a href="mailto:seanalongendyke@gmail.com"> seanalongendyke@gmail.com</a>.
+      an <a href="mailto:seanalongendyke@gmail.com"> email</a>.
     </p>
 
     <ul id="skills">
