--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     href="https://images.assetsdelivery.com/compings_v2/mdranahamid/mdranahamid2101/mdranahamid210100334.jpg"
     rel="icon"
   />
+
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-70EKSCZ7FV"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-70EKSCZ7FV");
+  </script>
 </head>
 
 <header>
