--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     rel="icon"
   />
 
+  <!--Google analytics-->
   <script
     async
     src="https://www.googletagmanager.com/gtag/js?id=G-70EKSCZ7FV"
@@ -19,6 +20,15 @@
 
     gtag("config", "G-70EKSCZ7FV");
   </script>
+  <!--End of Google analytics-->
+
+  <!--Testing insights.io analytics-->
+  <script src="https://getinsights.io/js/insights.js"></script>
+  <script>
+    insights.init("ShTQzC_3YyqsXw0B");
+    insights.trackPages();
+  </script>
+  <!--End of testing insights.io analytics-->
 </head>
 
 <header>
