--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Sean Longendyke</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="personal.css" rel="stylesheet" />
   <link
     href="https://images.assetsdelivery.com/compings_v2/mdranahamid/mdranahamid2101/mdranahamid210100334.jpg"
