--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     name="description"
     content="Portfolio and contact information for full stack developer Sean L"
   />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="personal.css" rel="stylesheet" />
   <link
     href="https://images.assetsdelivery.com/compings_v2/mdranahamid/mdranahamid2101/mdranahamid210100334.jpg"
