--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
       land on a space with an enemy class on it then it will start the battle
       function where it checks for card power, card chains, and the counter
       variables to see who wins. All the functionality is worked out and tested.
-      There is just data entry, optimizing/organizing the code, and styling to
-      finish.
+      There is just data entry, optimizing the code, and styling to finish.
     </p>
   </div>
 
