--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
   <h2 id="about">About</h2>
   <p id="description">
     I'm a full stack web developer with a passion for all things coding. I've
-    made worked on the front and back end of of websites, made helpful web
-    tools, and worked on video games. I have the most fun when I'm learning
-    something new and creating solutions. I'm experienced in dynamic web pages
-    with my primary focus on fast loading times, responsive design, and
-    intuitive UI for the ultimate user experience. If you want to see more of my
-    work or have any questions just
+    worked on the front and back end of of websites, made helpful web tools, and
+    worked on video games. I have the most fun when I'm learning something new
+    and creating solutions. I'm experienced in dynamic web pages with my primary
+    focus on fast loading times, responsive design, and intuitive UI for the
+    ultimate user experience. If you want to see more of my work or have any
+    questions just
     <a href="mailto:seanalongendyke@gmail.com">reach out!</a>
   </p>
   <ul id="skills">
@@ -87,7 +87,7 @@
       Example of a potential sales website. Uses the Passport.js middleware with
       cookies to register, login, and if you're logged in to enable you to add
       items to your cart which will automatically update your total. The focus
-      when building this project was on the main webpages layout and to to
+      when building this project was on the main webpages layout and to
       experiment with this middleware.
     </p>
   </div>
@@ -209,7 +209,8 @@
   <div id="contact">
     <a href="#top" id="to-top">To top</a>
     <p id="linked-link">
-      Contact me with email or through
+      Contact me with <a href="mailto:seanalongendyke@gmail.com">email</a> or
+      through
       <a href="https://www.linkedin.com/in/sean-longendyke/">linkedin.com</a>
     </p>
     <p id="code-hub">
