--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <h2 id="about">About</h2>
   <p id="description">
     I'm a full stack web developer with a passion for all things coding. I've
-    worked on the front and back end of of websites, made helpful web tools, and
+    worked on the front and back end of websites, made helpful web tools, and
     worked on video games. I have the most fun when I'm learning something new
     and creating solutions. I'm experienced in dynamic web pages with my primary
     focus on fast loading times, responsive design, and intuitive UI for the
