--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <div id="project-3">
     <h2>Pokemon Red/Blue Dex</h2>
     <p>
-      A Pokedex is a tool used to search for a Pokemon and tell you information
+      A Pokedex iss a tool used to search for a Pokemon and tell you information
       about it. It is designed to look similar to the ones in the show and I'm
       pretty proud of how it came out appearance wise. These days I would save
       the Pokemon's info in a database and make it make it responsive for
