--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div id="intro-wrap">
     <h1 id="hello">
       Hello I'm
-      <span id="me" style="color: red">Sean</span>. A full stack web developer.
+      <span id="me" style="color: red">Sean</span>. A full stack software engineer.
     </h1>
     <h1 id="intro">Welcome to my website!</h1>
     <div id="light-wrap">
@@ -54,13 +54,14 @@
 
   <h2 id="about">About</h2>
   <p id="description">
-    I'm a full stack web developer with a passion for all things coding. I've
-    worked on the front and back end of websites, made helpful web tools, and
-    worked on video games. I have the most fun when I'm learning something new
-    and creating solutions. I'm experienced in dynamic web pages with my primary
+    I'm a full stack software engineer with a passion for all things coding. I've
+    worked on the front and back end of websites, made helpful web tools, customized 
+    business CRMs with the Zoho software suite, done general IT work like building and fixing 
+    computers, and worked on video games. I have the most fun when I'm learning something new
+    and creating solutions. I'm experienced in dynamic web design with my primary
     focus on fast loading times, responsive design, and intuitive UI for the
-    ultimate user experience. If you want to see more of my work or have any
-    questions just
+    ultimate user experience. I don't update this site often so if you want to see my more 
+    current work, my certifications, or have any questions just
     <a href="mailto:seanalongendyke@gmail.com">reach out!</a>
   </p>
   <ul id="skills">
