--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
       variables that tick down counters when turns end. When a unit attempts to
       land on a space with an enemy class on it then it will start the battle
       function where it checks for card power, card chains, and the counter
-      variables to see who wins. All the functionality is worked out and tested.
-      There is just data entry, optimizing the code, and styling to finish.
+      variables to see who wins. All functionality is tested.
+      Only data entry, optimizing, and styling remains.
     </p>
   </div>
 
@@ -200,6 +200,33 @@
     <img
       id="img-5"
       src="img/fgo.png"
+      alt="Project Image"
+      class="project-image"
+    />
+  </a>
+
+  <div id="project-6">
+    <h2>Neural Drive</h2>
+    <p>
+      The canvas element is controlled with Javascript functions in real time to create 
+      a nearly impossible game for a human to complete. Next I created a self learning AI
+      to solve it in order to showcase an example of how an AI can doing what humans can't when 
+      used properly. You can select "Game" to try playing, "Network" to activate the neural network 
+      which you can watch learn to play until it wins, or "Best Brain" to see a brain that's already 
+      beaten the game. The AI sees through invisible lines in front of it that return a value based 
+      on how early they're interrupted by an object. It learns through a form of reinforcement learning 
+      where the car that goes the farthest gets the highest score and it's brain continues to the next 
+      game. The AI's brain is a bunch of values for where and if it should turn depending on the values 
+      it sees determining surrounding object distances. Each run it tries changing each variable that 
+      decides if and where it should turn by a certain percentage and runs a number of simulations to 
+      see if any result in a new high score.
+    </p>
+  </div>
+
+  <a href="https://github.com/Breach344/Neural-Drive3" target="_blank">
+    <img
+      id="img-6"
+      src="img/neural-drive.png"
       alt="Project Image"
       class="project-image"
     />
