--- a/index.html
+++ b/index.html
@@ -52,16 +52,15 @@
     </div>
   </div>
 
-  <h2 id="about">About</h2>
+  <h2 id="about">About Me</h2>
   <p id="description">
-    I'm a full stack software engineer with a passion for all things coding. I've
-    worked on the front and back end of websites, made helpful web tools, customized 
-    business CRMs with the Zoho software suite, done general IT work like building and fixing 
-    computers, and worked on video games. I have the most fun when I'm learning something new
-    and creating solutions. I'm experienced in dynamic web design with my primary
-    focus on fast loading times, responsive design, and intuitive UI for the
-    ultimate user experience. I don't update this site often so if you want to see my more 
-    current work, my certifications, or have any questions just
+    I'm a full stack software engineer passionate for all things coding. I've
+    worked the front and back end of sites, made helpful web tools, customized 
+    business CRMs with Zoho, built/fixed computers, and worked on video games. I 
+    have the most fun when learning something new and creating solutions. I'm experienced 
+    in dynamic web design with a primary focus on fast loading times, responsive design, 
+    and intuitive UI for an easy user experience. I don't update this site often so if you 
+    want to see my current work, my certifications, or have questions just
     <a href="mailto:seanalongendyke@gmail.com">reach out!</a>
   </p>
   <ul id="skills">
@@ -176,23 +175,20 @@
   <div id="project-5">
     <h2>FGO Duel(Video Game)</h2>
     <p>
-      If you don't know the rules they're on the
+      The rules are on the
       <a href="https://duel.fate-go.us/how_to_play/">official site</a>. It's
-      still a work in progress but I wanted to show off what I'm working on.
-      When you make an action it checks many variables before deciding what to
-      do. Your pieces on the board are assigned individual classes that get
-      removed and added from the tiles when you move in order to keep track of
-      their locations. The turn phases are done with a number counter that
-      changes based on your actions. Only certain actions are allowed for each
-      phase(only when the turn counter variable is at certain values). Each card
-      has an individual id to identify its type, power, and game piece. If all
-      cards used in battle have a type in common they create a chain with
-      varying abilities that could last several turns which I did by using
-      variables that tick down counters when turns end. When a unit attempts to
-      land on a space with an enemy class on it then it will start the battle
-      function where it checks for card power, card chains, and the counter
-      variables to see who wins. All functionality is tested.
-      Only data entry, optimizing, and styling remains.
+      still a work in progress but I wanted to show this off. Your pieces on the 
+      board are assigned individual classes that get removed and added from the tiles 
+      when you move in order to keep track of their locations. Turn phases are done 
+      with a number counter. Only certain actions are allowed for each phase(only when 
+      the turn counter variable is at certain values). Each card has an individual id 
+      to identify its type, power, and game piece. If all cards used in battle have a 
+      type in common they create a chain with varying abilities that could last several 
+      turns which I did by using variables that tick down counters when turns end. When 
+      a unit attempts to land on a space with an enemy class on it then it will start the 
+      battle function where it checks for card power, card chains, and the counter
+      variables to see who wins. All functionality is tested. Only data entry, optimizing, 
+      and styling remains.
     </p>
   </div>
 
