--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 
   <h2 id="about">About Me</h2>
   <p id="description">
-    I'm a full stack software engineer passionate for all things coding. I've
-    worked the front and back end of sites, made helpful web tools, customized 
-    business CRMs with Zoho, built/fixed computers, and worked on video games. I 
-    have the most fun when learning something new and creating solutions. I'm experienced 
-    in dynamic web design with a primary focus on fast loading times, responsive design, 
-    and intuitive UI for an easy user experience. I don't update this site often so if you 
-    want to see my current work, my certifications, or have questions just
+    A full stack software engineer passionate for all things tech. I've
+    made the front and back ends of sites, created helpful web tools, customized 
+    business CRMs with Zoho, and worked on video games. I have the most fun learning 
+    something new and creating solutions. I'm experienced in dynamic web design with 
+    a primary focus on fast loading times, responsive design, and intuitive UI for an 
+    easy user experience. I don't update this site often so if you want to see my current 
+    work, my certifications, or have questions just
     <a href="mailto:seanalongendyke@gmail.com">reach out!</a>
   </p>
   <ul id="skills">
