--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
       whatever device someone is looking at it on but for this the Pokemon info
       is saved as a Javascript object and when a Pokemon is selected it changes
       the text info to the corresponding information. For further improvements I
-      would also make one function for all data changes to cut down on the code.
-      I chose not to use some preexisting API's because I wanted to use the
-      older game designs and I noticed errors on the API's I was looking at.
+      would make one function for all data changes. I chose not to use a preexisting 
+      API because I wanted to use the older sprites and noticed errors on the 
+      existing ones for it.
     </p>
   </div>
 
